--- a/SO-41D-G2-SERIE2/Uthreads2/Exercicio6/Exercicio6.vcxproj
+++ b/SO-41D-G2-SERIE2/Uthreads2/Exercicio6/Exercicio6.vcxproj
@@ -157,7 +157,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Talk.cpp" />
+    <ClCompile Include="TalkApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Exercicio6Child\Exercicio6Child.vcxproj">
