--- a/SO-41D-G2-SERIE2/Uthreads2/Exercicio6/Exercicio6.vcxproj.filters
+++ b/SO-41D-G2-SERIE2/Uthreads2/Exercicio6/Exercicio6.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
-    <ClCompile Include="Talk.cpp">
+    <ClCompile Include="TalkApp.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
   </ItemGroup>
