finished ex7, still must be improved

--- a/SO-41D-G2-SERIE2/Uthreads2/Exercicio3/Exercicio3.vcxproj
+++ b/SO-41D-G2-SERIE2/Uthreads2/Exercicio3/Exercicio3.vcxproj
@@ -159,6 +159,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UThread\UThread.vcxproj">
+      <Project>{2650ca3c-1dde-4d98-96d6-927b382f409a}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
