--- a/SO-41D-G2-SERIE3/ClientEx1/ClientEx1.vcxproj.filters
+++ b/SO-41D-G2-SERIE3/ClientEx1/ClientEx1.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Ex2CLIENT.cpp">
+    <ClCompile Include="ClientEx1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
