--- a/SO-41D-G2-SERIE3/ClientEx1/ClientEx1.vcxproj
+++ b/SO-41D-G2-SERIE3/ClientEx1/ClientEx1.vcxproj
@@ -20,11 +20,10 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{A1138A31-26A6-4738-AABF-D9914CFFE17C}</ProjectGuid>
+    <ProjectGuid>{CD093B32-6590-4DAC-9F05-B62347D98904}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Ex1CLIENT</RootNamespace>
+    <RootNamespace>ClientEx1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
-    <ProjectName>Ex2CLIENT</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -152,7 +151,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ex2CLIENT.cpp" />
+    <ClCompile Include="ClientEx1.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
